--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>factions_2_5</module>
         <module>factions_2_6</module>
         <module>factions_2_7</module>
+        <module>factions_2_8</module>
         <module>obsidiandestroyer</module>
     </modules>
 
