--- a/factions_2_8/pom.xml
+++ b/factions_2_8/pom.xml
@@ -2,23 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.drtshock</groupId>
-    <artifactId>ObsidianDestroyer-Factions-v1_6_9</artifactId>
+    <artifactId>ObsidianDestroyer-Factions-v2_8_x</artifactId>
     <packaging>jar</packaging>
-    <name>ObsidianDestroyer Factions v1_6_9</name>
-    <version>v1_6_9</version>
+    <name>ObsidianDestroyer Factions v2_8_x</name>
+    <version>v2_8_x</version>
 
     <parent>
         <groupId>com.drtshock</groupId>
         <artifactId>ObsidianDestroyer</artifactId>
         <version>parent</version>
     </parent>
-
-    <repositories>
-        <repository>
-            <id>com.turt2live.lib</id>
-            <url>http://repo.turt2live.com/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -28,10 +21,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.turt2live.lib</groupId>
-            <artifactId>Factions-1.6.9.4</artifactId>
-            <version>1.6.9.4</version>
-            <scope>provided</scope>
+            <groupId>com.massivecraft</groupId>
+            <artifactId>MassiveCore</artifactId>
+            <version>2.8.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../lib/MassiveCore_2.8.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.massivecraft</groupId>
+            <artifactId>Factions</artifactId>
+            <version>2.8.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../lib/Factions_2.8.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.drtshock</groupId>
