Fix version issues with factions.  Support for 2.2.x and 2.5.x fixed.

--- a/obsidiandestroyer/pom.xml
+++ b/obsidiandestroyer/pom.xml
@@ -102,6 +102,14 @@
         </dependency>
         <dependency>
             <groupId>com.drtshock</groupId>
+            <artifactId>ObsidianDestroyer-Factions-v2_2_x</artifactId>
+            <version>v2_2_x</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.drtshock</groupId>
             <artifactId>ObsidianDestroyer-Factions-v2_5_x</artifactId>
             <version>v2_5_x</version>
             <type>jar</type>
