Implement option for using faction power to deny explosion damage when faction power is greater than total land. Add override per material to damage protected faction land even when at full power.

--- a/obsidiandestroyer/src/main/resources/config.yml
+++ b/obsidiandestroyer/src/main/resources/config.yml
@@ -80,6 +80,9 @@ Factions:
   # Toggles explosion features between ObsidianDestroyer and Factions.
   HandleExplosions: true
 
+  # Enable this to only damage blocks when Faction power is low
+  UseFactionPowerLevel: false
+
   # Toggle to manage an offline faction. (Override & Multiplier)
   # Enables an override that will allow [managed] blocks to be destroyed for a protected offline faction.
   HandleOffline: false
