--- a/obsidiandestroyer/pom.xml
+++ b/obsidiandestroyer/pom.xml
@@ -10,10 +10,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <issueManagement>
         <system>GitHub</system>
         <url>https://github.com/drtshock/ObsidianDestroyer/issues</url>
     </issueManagement>
+
     <build>
         <directory>../target</directory>
         <finalName>ObsidianDestroyer</finalName>
@@ -45,28 +47,24 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
         <repository>
-            <id>com.turt2live.lib</id>
-            <url>http://repo.turt2live.com/</url>
+            <id>cannons-repo</id>
+            <url>https://github.com/DerPavlov/mvn-repo/raw/master/</url>
         </repository>
     </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <scope>provided</scope>
             <version>1.9.4-R0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.turt2live.lib</groupId>
-            <artifactId>Cannons</artifactId>
-            <scope>provided</scope>
-            <version>2.1R1</version>
         </dependency>
         <dependency>
             <groupId>com.drtshock</groupId>
@@ -78,48 +76,8 @@
         </dependency>
         <dependency>
             <groupId>com.drtshock</groupId>
-            <artifactId>ObsidianDestroyer-Factions-v1_6_9</artifactId>
-            <version>v1_6_9</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.drtshock</groupId>
             <artifactId>ObsidianDestroyer-Factions-v1_6_9_UU</artifactId>
             <version>v1_6_9_UU</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.drtshock</groupId>
-            <artifactId>ObsidianDestroyer-Factions-v1_8_x</artifactId>
-            <version>v1_8_x</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.drtshock</groupId>
-            <artifactId>ObsidianDestroyer-Factions-v2_2_x</artifactId>
-            <version>v2_2_x</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.drtshock</groupId>
-            <artifactId>ObsidianDestroyer-Factions-v2_5_x</artifactId>
-            <version>v2_5_x</version>
-            <type>jar</type>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.drtshock</groupId>
-            <artifactId>ObsidianDestroyer-Factions-v2_6_x</artifactId>
-            <version>v2_6_x</version>
             <type>jar</type>
             <scope>compile</scope>
             <optional>true</optional>
@@ -139,6 +97,11 @@
             <type>jar</type>
             <scope>compile</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>at.pavlov</groupId>
+            <artifactId>Cannons</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
