--- a/obsidiandestroyer/src/main/resources/plugin.yml
+++ b/obsidiandestroyer/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: com.drtshock.obsidiandestroyer.ObsidianDestroyer
 version: ${project.version}
 authors: [drtshock, squidicuz]
 softdepend: [mcore, MassiveCore, Factions]
+api-version: 1.13
 
 commands:
     od:
