--- a/obsidiandestroyer/src/main/resources/plugin.yml
+++ b/obsidiandestroyer/src/main/resources/plugin.yml
@@ -3,18 +3,18 @@ main: com.drtshock.obsidiandestroyer.ObsidianDestroyer
 version: ${project.version}
 authors: [drtshock, squidicuz]
 softdepend: [mcore, MassiveCore, Factions]
-api-version: 1.13
+api-version: "1.13"
 
 commands:
-    od:
-        description: ObsidianDestroyer command.
-        usage: /<command> <reload | reloadDB | reset | version>
-        aliases: [obsidiandestroyer]
-        permission: obsidiandestroyer.admin
+  od:
+    description: ObsidianDestroyer command.
+    usage: /<command> <reload | reloadDB | reset | version>
+    aliases: [obsidiandestroyer]
+    permission: obsidiandestroyer.admin
 permissions:
-    obsidiandestroyer.admin:
-      default: op
-      description: Allow you to use all admin commands for this plugin.
-    obsidiandestroyer.check:
-      default: true
-      description: Allow you to check the durability of a block with an item.
+  obsidiandestroyer.admin:
+    default: op
+    description: Allow you to use all admin commands for this plugin.
+  obsidiandestroyer.check:
+    default: true
+    description: Allow you to check the durability of a block with an item.
