--- a/obsidiandestroyer/pom.xml
+++ b/obsidiandestroyer/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>ObsidianDestroyer</artifactId>
     <name>ObsidianDestroyer</name>
     <url>https://github.com/drtshock/ObsidianDestroyer</url>
-    <version>4.4.15-SNAPSHOT</version>
+    <version>4.4.15</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
