Lower API version to support 1.16 Add cannons as softdepend. Fix material name

--- a/obsidiandestroyer/src/main/resources/materials.yml
+++ b/obsidiandestroyer/src/main/resources/materials.yml
@@ -326,7 +326,7 @@ HandledMaterials:
       Cannons: true
       Withers: false
       Minecarts: false
-  STONE_BRICK:
+  STONE_BRICKS:
     BlastRadius: 3
     Durability:
       Amount: 4
